package common;

import common.requests.ExecuteCommandResponce;

/**
 * Interface of all commands
 */
public interface ICommand {
    /**
     * Method to get command name
     * @return String command name
     */
    String getName();

    /**
     * Method to execute command
     *
     * @return
     */
    ExecuteCommandResponce execute();
}
