package common.requests;

public enum ClientRequestType {
    EXECUTE_COMMAND,
    CHECK_ID,
    IS_COLLECTION_EMPTY
}
