package common.requests;

import java.io.Serializable;

public enum ResultState implements Serializable {
    SUCCESS,
    EXCEPTION
}
